{
  "version": 4,
  "terraform_version": "0.12.29",
  "serial": 19,
  "lineage": "2b6e90bd-e4a3-0a5e-c5d2-a1f6a158059a",
  "resources": [
    {
      "mode": "data",
      "type": "aws_security_group",
      "name": "default",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:819370969351:security-group/sg-06f22447110091d0c",
            "description": "default VPC security group",
            "filter": null,
            "id": "sg-06f22447110091d0c",
            "name": "default",
            "tags": {},
            "vpc_id": "vpc-0bbf3a918a1bbe1a4"
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "default_network_acl",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_vpc",
      "name": "default_vpc",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-0a75eba0b8fe1627b",
            "public_dns": "ec2-3-8-245-243.eu-west-2.compute.amazonaws.com",
            "public_ip": "3.8.245.243",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "non-production",
              "Name": "non-production-eu-west-2a",
              "Owner": "DevOps"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.elb.module.elb",
      "mode": "managed",
      "type": "aws_elb",
      "name": "default",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "internet_gateway",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:819370969351:internet-gateway/igw-0801da7f277e7cddc",
            "id": "igw-0801da7f277e7cddc",
            "owner_id": "819370969351",
            "tags": {
              "Environment": "non-production",
              "Name": "non-production",
              "Owner": "DevOps"
            },
            "vpc_id": "vpc-0bbf3a918a1bbe1a4"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.ipv4_cidr_block_association"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gateway",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "private",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "public",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "private_inbound",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "private_outbound",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "public_inbound",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "public_outbound",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0801da7f277e7cddc",
            "id": "r-rtb-012b8b221c215319a1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-012b8b221c215319a",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.internet_gateway",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.ipv4_cidr_block_association"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0276c932e2399146b",
            "owner_id": "819370969351",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "non-production",
              "Name": "non-production-private",
              "Owner": "DevOps"
            },
            "vpc_id": "vpc-0bbf3a918a1bbe1a4"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.ipv4_cidr_block_association"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-012b8b221c215319a",
            "owner_id": "819370969351",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "non-production",
              "Name": "non-production-public",
              "Owner": "DevOps"
            },
            "vpc_id": "vpc-0bbf3a918a1bbe1a4"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.ipv4_cidr_block_association"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "http",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:819370969351:security-group/sg-0acffea1f7275cd6b",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0acffea1f7275cd6b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Security group with HTTP ports open for everybody (IPv4 CIDR), egress ports are all world open",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "http",
            "name_prefix": null,
            "owner_id": "819370969351",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "HTTP"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bbf3a918a1bbe1a4"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "https",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:819370969351:security-group/sg-058daeeb7009fa1e1",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-058daeeb7009fa1e1",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Security group with HTTPS ports open for everybody (IPv4 CIDR), egress ports are all world open",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "https",
            "name_prefix": null,
            "owner_id": "819370969351",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "HTTPS"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bbf3a918a1bbe1a4"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "mysql",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:819370969351:security-group/sg-0d90eab412f63abc7",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d90eab412f63abc7",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.10.0.0/16"
                ],
                "description": "Security group with MySQL ports,  Allow ingress rules to be accessed only within current VPC.",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "mysql",
            "name_prefix": null,
            "owner_id": "819370969351",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "MySQL"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bbf3a918a1bbe1a4"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ssh",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:819370969351:security-group/sg-0c758715542191b0e",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c758715542191b0e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Security group with SSH ports open for everybody (IPv4 CIDR), egress ports are all world open",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "ssh",
            "name_prefix": null,
            "owner_id": "819370969351",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "SSH"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bbf3a918a1bbe1a4"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:819370969351:subnet/subnet-09cb90c239cd2b238",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.10.11.0/24",
            "id": "subnet-09cb90c239cd2b238",
            "map_public_ip_on_launch": false,
            "owner_id": "819370969351",
            "tags": {
              "Environment": "non-production",
              "Name": "non-production-private-eu-west-2a",
              "NetworkZone": "private",
              "Owner": "DevOps"
            },
            "vpc_id": "vpc-0bbf3a918a1bbe1a4"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.ipv4_cidr_block_association"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:819370969351:subnet/subnet-0a98cb625a18ce9db",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2c",
            "availability_zone_id": "euw2-az1",
            "cidr_block": "10.10.31.0/24",
            "id": "subnet-0a98cb625a18ce9db",
            "map_public_ip_on_launch": false,
            "owner_id": "819370969351",
            "tags": {
              "Environment": "non-production",
              "Name": "non-production-private-eu-west-2c",
              "NetworkZone": "private",
              "Owner": "DevOps"
            },
            "vpc_id": "vpc-0bbf3a918a1bbe1a4"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.ipv4_cidr_block_association"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:819370969351:subnet/subnet-034162f9afe65d4dc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.10.10.0/24",
            "id": "subnet-034162f9afe65d4dc",
            "map_public_ip_on_launch": true,
            "owner_id": "819370969351",
            "tags": {
              "Environment": "non-production",
              "Name": "non-production-public-eu-west-2a",
              "NetworkZone": "public",
              "Owner": "DevOps"
            },
            "vpc_id": "vpc-0bbf3a918a1bbe1a4"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.ipv4_cidr_block_association"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:819370969351:subnet/subnet-012a5f3a4f4ce7f7f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2c",
            "availability_zone_id": "euw2-az1",
            "cidr_block": "10.10.30.0/24",
            "id": "subnet-012a5f3a4f4ce7f7f",
            "map_public_ip_on_launch": true,
            "owner_id": "819370969351",
            "tags": {
              "Environment": "non-production",
              "Name": "non-production-public-eu-west-2c",
              "NetworkZone": "public",
              "Owner": "DevOps"
            },
            "vpc_id": "vpc-0bbf3a918a1bbe1a4"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.ipv4_cidr_block_association"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:819370969351:vpc/vpc-0bbf3a918a1bbe1a4",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.0.0/16",
            "default_network_acl_id": "acl-02869f744253ea892",
            "default_route_table_id": "rtb-0b691a7294ab26d01",
            "default_security_group_id": "sg-06f22447110091d0c",
            "dhcp_options_id": "dopt-6cf2b904",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0bbf3a918a1bbe1a4",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0b691a7294ab26d01",
            "owner_id": "819370969351",
            "tags": {
              "Environment": "non-production",
              "Name": "non-production",
              "Owner": "DevOps"
            }
          }
        }
      ]
    }
  ]
}